--- a/Tech/Shopper/app/src/main/res/values/strings.xml
+++ b/Tech/Shopper/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CrossSellers</string>
+    <string name="already_have_an_account">Already have an account? <font color ="#F68821">Login</font></string>
+    <string name="dont_have_an_account">Don\'t have an account? <font color ="#F68821">Create now</font></string>
+    <string name="recover_password">Forgot Password? <font color ="#F68821">Recover</font></string>
 </resources>
